@@ -655,7 +655,7 @@ int main(int argc, const char ** argv)
 #endif
 
 #if defined(IAM_RPMK)
-    int addSign = NEW_SIGNATURE;
+    enum rpmKtype addSign = RPMK_NEW_SIGNATURE;
     int checksigFlags = 0;
 #endif
 
@@ -887,7 +887,7 @@ int main(int argc, const char ** argv)
 	    if (bigMode != MODE_UNKNOWN && bigMode != MODE_RESIGN)
 		argerror(_("only one major mode may be specified"));
 	    bigMode = MODE_RESIGN;
-	    addSign = NEW_SIGNATURE;
+	    addSign = RPMK_NEW_SIGNATURE;
 	    signIt = 1;
 	    break;
 
@@ -895,7 +895,7 @@ int main(int argc, const char ** argv)
 	    if (bigMode != MODE_UNKNOWN && bigMode != MODE_RESIGN)
 		argerror(_("only one major mode may be specified"));
 	    bigMode = MODE_RESIGN;
-	    addSign = ADD_SIGNATURE;
+	    addSign = RPMK_ADD_SIGNATURE;
 	    signIt = 1;
 	    break;
 #endif	/* IAM_RPMK */
